tests/ui/endpoint/too_few_args.stderr
error: Too few arguments for this endpoint handler
 --> tests/ui/endpoint/too_few_args.rs:9:4
  |
9 | fn read() {}
  |    ^^^^

error[E0412]: cannot find type `read___gotham_restful_endpoint` in this scope
 --> tests/ui/endpoint/too_few_args.rs:5:12
  |
4 | #[derive(Resource)]
  |                  - help: you might be missing a type parameter: `<read___gotham_restful_endpoint>`
5 | #[resource(read)]
  |            ^^^^ not found in this scope
